testsuite/tests/properties/invalid_dflt_arg_override/common.lkt
from lexer_example import foo_lexer
from test import Example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
